--- a/Q1.md
+++ b/Q1.md
@@ -1,16 +1,12 @@
 import os
 
 def criar_estrutura_diretorio_no_desktop():
-    """
-    Solicita o nome de um diretório e cria as subpastas 'config', 'logs'
-    e 'backup' dentro dele, localizado no Desktop.
-    """
-    # 1. Encontrar o caminho para o Desktop
+  
     desktop_path = None
-    if os.name == 'nt':  # Para Windows
+    if os.name == 'nt': 
         desktop_path = os.path.join(os.environ['USERPROFILE'], 'Desktop')
-    elif os.name == 'posix':  # Para macOS e Linux
-        # Tenta caminhos comuns para o Desktop
+    elif os.name == 'posix':  
+    
         home_path = os.path.expanduser("~")
         possible_desktop_paths = [
             os.path.join(home_path, 'Desktop'),
@@ -22,7 +18,7 @@ def criar_estrutura_diretorio_no_desktop():
                 break
         if not desktop_path:
             print("Não foi possível encontrar o caminho do Desktop automaticamente. Por favor, crie manualmente.")
-            return # Sai da função se não encontrar o Desktop
+            return 
 
     if not desktop_path or not os.path.exists(desktop_path):
         print(f"Erro: O caminho do Desktop não foi encontrado ou não existe: {desktop_path}")
@@ -31,7 +27,6 @@ def criar_estrutura_diretorio_no_desktop():
 
     print(f"Seu Desktop foi identificado em: {desktop_path}")
 
-    # 2. Obter o nome do diretório principal do usuário
     while True:
         nome_diretorio_principal = input("Digite o nome do diretório principal a ser criado no Desktop: ").strip()
         if nome_diretorio_principal:
@@ -39,21 +34,17 @@ def criar_estrutura_diretorio_no_desktop():
         else:
             print("O nome do diretório não pode ser vazio. Por favor, tente novamente.")
 
-    # 3. Definir o caminho completo do novo diretório no Desktop
     caminho_completo_novo_diretorio = os.path.join(desktop_path, nome_diretorio_principal)
 
-    # 4. Definir os nomes das subpastas
     subpastas = ["config", "logs", "backup"]
 
     try:
-        # Cria o diretório principal no Desktop se ele não existir
         if not os.path.exists(caminho_completo_novo_diretorio):
             os.makedirs(caminho_completo_novo_diretorio)
             print(f"Diretório principal '{nome_diretorio_principal}' criado com sucesso em: {caminho_completo_novo_diretorio}")
         else:
             print(f"Diretório principal '{nome_diretorio_principal}' já existe em: {caminho_completo_novo_diretorio}")
 
-        # Cria as subpastas
         for pasta in subpastas:
             caminho_subpasta = os.path.join(caminho_completo_novo_diretorio, pasta)
             if not os.path.exists(caminho_subpasta):
